@@ -236,6 +236,7 @@ source "package/dbus-glib/Config.in"
 source "package/dbus-python/Config.in"
 source "package/devmem2/Config.in"
 source "package/dmraid/Config.in"
+source "package/dosfstools/Config.in"
 source "package/e2fsprogs/Config.in"
 source "package/eeprog/Config.in"
 source "package/fconfig/Config.in"
@@ -258,7 +259,6 @@ source "package/lm-sensors/Config.in"
 source "package/lvm2/Config.in"
 source "package/mdadm/Config.in"
 source "package/memtester/Config.in"
-source "package/mkdosfs/Config.in"
 source "package/mtd/Config.in"
 source "package/ntfs-3g/Config.in"
 source "package/pciutils/Config.in"
