@@ -1,6 +1,0 @@
-config BR2_PACKAGE_MKDOSFS
-	bool "mkdosfs"
-	help
-	  Creates a DOS FAT filesystem on a device.
-
-	  ftp://ftp.uni-erlangen.de/pub/Linux/LOCAL/dosfstools/
